--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,3 +1,21 @@
-<nav class="navbar fixed-top navbar-light bg-light" style="height:70px; background:#252525">
-  <!-- <a href="" class="navbar-brand text-center">brands</a> -->
+<nav class="navbar navbar-expand navbar-light" style="height:90px;">
+      <a class="navbar-brand">
+        <img src="../../../assets/images/logo2sahib.png" alt="" style="height:90px; width:90px; border-radius:50%; background: transparent; margin: 0;">
+      </a>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="#" style="color: antiquewhite;">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#" style="color: antiquewhite;">My Works</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#" style="color: antiquewhite;">Blogs</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true" style="color: antiquewhite;">Contact</a>
+          </li>
+        </ul>
+      </div>
 </nav>
