--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,11 +1,11 @@
-<nav class="navbar navbar-expand navbar-light" style="height:90px;">
-      <a class="navbar-brand">
-        <img src="../../../assets/images/logo2sahib.png" alt="" style="height:90px; width:90px; border-radius:50%; background: transparent; margin: 0;">
+<nav class="navbar navbar-expand navbar-light" style="height:70px; background: #343131;">
+      <a href="/home" class="navbar-brand">
+        <img src="../../../assets/images/logo2sahib.png" alt="" style="height:120px; width:120px; border-radius:50%; background: transparent; margin: 0;">
       </a>
       <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
+        <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#" style="color: antiquewhite;">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="/home" style="color: antiquewhite;">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#" style="color: antiquewhite;">My Works</a>
@@ -16,6 +16,10 @@
           <li class="nav-item">
             <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true" style="color: antiquewhite;">Contact</a>
           </li>
+          <li class="nav-item">
+            <i class="fas fa-ellipsis-v"></i>
+          </li>
         </ul>
+        <i class="fas fa-ellipsis-v"></i>
       </div>
 </nav>
